crates/ty_python_types/resources/mdtest/snapshots/functions.md_-_Generic_functions___P…_-_Inferring_a_bound_ty…_(5935d14c26afe407).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: functions.md - Generic functions: PEP 695 syntax - Inferring a bound typevar
mdtest path: crates/ty_python_types/resources/mdtest/generics/pep695/functions.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import reveal_type
2 | 
3 | def f[T: int](x: T) -> T:
4 |     return x
5 | 
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `f` is incorrect
 --> src/mdtest_snippet.py:9:15
  |
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
  |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy upper bound `int` of type variable `T`
  |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: int](x: T) -> T:
  |       ^^^^^^
4 |     return x
  |
info: rule `invalid-argument-type` is enabled by default

```
